benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix009.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix009.opt.yml/mix009.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix009.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_tswugaqv/tmp/tmp_psldyyf.c
Compilation started
/tmp/BenchExec_run_tswugaqv/tmp/tmp_psldyyf.c: In function ‘P0’:
/tmp/BenchExec_run_tswugaqv/tmp/tmp_psldyyf.c:574:19: error: ‘FALSE’ undeclared (first use in this function)
  574 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_tswugaqv/tmp/tmp_psldyyf.c:574:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_tswugaqv/tmp/tmp_psldyyf.c: In function ‘P1’:
/tmp/BenchExec_run_tswugaqv/tmp/tmp_psldyyf.c:613:19: error: ‘FALSE’ undeclared (first use in this function)
  613 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_tswugaqv/tmp/tmp_psldyyf.c:614:19: error: ‘TRUE’ undeclared (first use in this function)
  614 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
